--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -2,6 +2,21 @@
   background-color: var(--primaryK) !important;
   color: white !important;
 }
+/* ////recent work */
+.nav-link {
+  width: 100%;
+  padding: 20px 0;
+  overflow: hidden;
+  flex-grow: 1;
+  cursor: pointer;
+  position: relative;
+  text-decoration: none;
+}
+
+/* .nav-link:hover,
+.nav-link:active {
+  background: red;
+} */
 
 .profile {
   height: 40px;
@@ -165,7 +180,7 @@
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   padding: 20px;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
 .filters-f {
   background: #ffffff;
@@ -173,7 +188,7 @@
   border-radius: 10px;
   padding: 20px;
 }
-.filters:hover{
+.filters:hover {
   transform: scale(0.9);
   cursor: pointer;
 }
@@ -223,11 +238,11 @@
   border-radius: 50%;
   position: relative;
 }
-.d-profile-img .online{
+.d-profile-img .online {
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background-color: #27AE60;
+  background-color: #27ae60;
   position: absolute;
   top: 20px;
   right: 13px;
@@ -255,18 +270,18 @@
   color: #121f3e66;
   padding-top: 5px;
 }
-.d-profile-description p:last-child{
+.d-profile-description p:last-child {
   font: 13px poppinsMd;
   font-weight: 500;
   color: var(--primaryK);
 }
 
-.px-10{
+.px-10 {
   padding-left: 63px;
   padding-right: 63px;
 }
 
-.down-arrow{
+.down-arrow {
   animation: MoveUpDown 1.5s linear infinite;
   position: relative;
   left: 0%;
@@ -274,7 +289,8 @@
 }
 
 @keyframes MoveUpDown {
-  0%, 100% {
+  0%,
+  100% {
     top: 0;
   }
   50% {
@@ -282,27 +298,26 @@
   }
 }
 
-
-.scroll{
+.scroll {
   height: 73vh;
   overflow-y: scroll;
 }
 
 /* Chat */
 
-.chat-o-profile{
+.chat-o-profile {
   height: 50px;
   width: 50px;
   border-radius: 50%;
 }
-.chat-o-profile img{
+.chat-o-profile img {
   height: 100%;
   width: 100%;
   border-radius: 50%;
   object-fit: cover;
 }
 
-.audio-call{
+.audio-call {
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -310,99 +325,99 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
-.audio-call:hover{
+.audio-call:hover {
   transform: scale(1.1);
   cursor: pointer;
 }
 
-.single-chat-profile{
+.single-chat-profile {
   height: 50px;
   width: 50px;
   border-radius: 50%;
 }
-.single-chat-profile img{
+.single-chat-profile img {
   height: 100%;
   width: 100%;
   border-radius: 50%;
   object-fit: cover;
 }
 
-.single-chat a{
+.single-chat a {
   text-decoration: none !important;
   color: var(--blueK) !important;
 }
-.single-chat{
-  transition: transform .2s;
+.single-chat {
+  transition: transform 0.2s;
 }
-.single-chat:hover{
+.single-chat:hover {
   transform: scale(1.1);
   cursor: pointer;
 }
-.single-chat-name{
- font: 15px right;
- color: #151515; 
+.single-chat-name {
+  font: 15px right;
+  color: #151515;
 }
-.single-chat-msg{
+.single-chat-msg {
   font: 12px poppins;
-  color: #151515; 
- }
+  color: #151515;
+}
 
- .single-chat-time{
-   font: 10px poppins;
-   color: var(--blueK);
- }
+.single-chat-time {
+  font: 10px poppins;
+  color: var(--blueK);
+}
 
- .chat-header{
-   padding: 7px 20px;
- }
+.chat-header {
+  padding: 7px 20px;
+}
 
- .chat.ant-layout-sider{
-   min-width: 350px !important;
-   border-right: 1px solid #d5d5d5;
-   height: 85vh !important;
- }
+.chat.ant-layout-sider {
+  min-width: 350px !important;
+  border-right: 1px solid #d5d5d5;
+  height: 85vh !important;
+}
 
- .msg-recieve{
+.msg-recieve {
   width: max-content;
-   background-color: #EAEAEA;
-   border-radius: 5px;
-   padding: 10px 20px;
-   text-align: center;
-   margin-bottom: 10px;
- }
- .msg-recieve p{
-   font: 16px poppins;
- }
- .msg-send p{
+  background-color: #eaeaea;
+  border-radius: 5px;
+  padding: 10px 20px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.msg-recieve p {
   font: 16px poppins;
 }
- .msg-send{
+.msg-send p {
+  font: 16px poppins;
+}
+.msg-send {
   width: max-content;
-   background-color: #72D3D3;
-   border-radius: 5px;
-   padding: 10px 20px;
-   text-align: center;
-   margin-bottom: 10px;
- }
- .msgs-send{
-   display: flex;
-   align-items: center;
-   justify-content: flex-end;
- }
+  background-color: #72d3d3;
+  border-radius: 5px;
+  padding: 10px 20px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.msgs-send {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
 
- .emojis{
-   height: 50px;
-   width: 50px;
-   background-color: #EAEAEA;
-   border-radius: 5px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   font-size: 25px;
- }
-.send{
+.emojis {
+  height: 50px;
+  width: 50px;
+  background-color: #eaeaea;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+}
+.send {
   height: 50px;
   width: 100px;
   background-color: var(--primaryK);
@@ -414,15 +429,14 @@
   font-size: 25px;
 }
 
-.type-msg input{
+.type-msg input {
   min-width: 680px !important;
   height: 50px;
   border-radius: 5px !important;
   border: 1px solid #808080;
 }
 
-
-.chat-content .scroll{
+.chat-content .scroll {
   height: 65vh !important;
   overflow-y: scroll;
 }
