--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -440,3 +440,12 @@
   height: 65vh !important;
   overflow-y: scroll;
 }
+
+.VJL48qbQzWENTFAh1Knk {
+  display: none !important;
+}
+
+.lmtWIHO_gkbTeeyuvoJC {
+  height: 100vh !important;
+  overflow: hidden !important;
+}
