--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -29,6 +29,17 @@
   border-radius: 50%;
   object-fit: cover;
 }
+.image_div {
+  width: 100px;
+  height: 100px;
+  background: #f3f3f3;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 1px solid #000; */
+}
+
 .ant-layout-header {
   line-height: 0px !important;
 }
@@ -441,11 +452,10 @@
   overflow-y: scroll;
 }
 
-.VJL48qbQzWENTFAh1Knk {
-  display: none !important;
+.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+  background-color: #fff !important;
 }
-
-.lmtWIHO_gkbTeeyuvoJC {
-  height: 100vh !important;
-  overflow: hidden !important;
+.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input)
+  .ant-select-selector {
+  border: 1px solid #72d3d3 !important;
 }
