--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -424,9 +424,11 @@
   justify-content: center;
   font-size: 25px;
 }
+
 .send {
   height: 50px;
   width: 100px;
+  /* border: 1px solid black; */
   background-color: var(--primaryK);
   border-radius: 5px;
   color: white;
@@ -437,7 +439,7 @@
 }
 
 .type-msg input {
-  min-width: 680px !important;
+  min-width: 500px !important;
   height: 50px;
   border-radius: 5px !important;
   border: 1px solid #808080;
